stylesheet.less
/* ... */
.widget.signupform fieldset input {
    height: 40px;
    width: 100%;
    border: 1px solid @color-swatch4;
    background-color: @color-swatch1;
    font-family: @font-swatch5-font-family;
    font-size: @font-swatch5-font-size;
    color: @font-swatch5-color;
    text-indent: 8px;
    margin-top: 6px;
    margin-bottom: 20px;
    float:left;
    padding: 0;
}

.widget.signupform fieldset input:focus {
    outline: none;
    box-shadow: 0 0 5px @color-swatch3;
}

.widget.signupform fieldset button.btn {
    padding: 20px 40px 20px 22px;
    margin: 0;
    border: none;
    background-color: @font-swatch7-background-color;
    font-family: @font-swatch7-font-family;
    font-size: @font-swatch7-font-size;
    font-weight:@font-swatch7-font-weight;
    background-color: @font-swatch7-background-color;
    color: @font-swatch7-color;
    text-decoration: none;
    background-image: image('/images/greytriangle-button.png');
    background-size: 30px;
    background-position: center right;
    background-repeat: no-repeat;
}

.widget.signupform fieldset button.btn:hover {
    background-color: @font-swatch7-background-color-hover;
    cursor: pointer;
}

/* ===============================
   SLIDESHOW WIDGET
   =============================== */
.widget.responsiveslideshow .slideshow-image-list {
    height: 500px;
    background-color: @color-swatch2;
}

.widget.responsiveslideshow .slideshow-widget {
    background-color: transparent;
}
.widget.responsiveslideshow span.inner img {
   width: auto;
}

.widget.responsiveslideshow .image-wrapper {
    padding:15px;
}

.widget.responsiveslideshow .crop .image-wrapper {
    padding:0;
}

.widget.responsiveslideshow .content-wrapper {
    position:absolute;
    bottom:0;
    left:0;
    right:0;
    top:auto;
    text-align: left;
    background-color: @color-swatch2;
}

.widget.responsiveslideshow .title {
    display: inline-block;
    padding:10px 15px 10px 15px;
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight: @font-swatch5-font-weight;
    line-height:bkscale(@font-swatch5-line-height, 0.9);
    color: @color-swatch5;
    letter-spacing: @font-swatch5-letter-spacing;
    background-color: @color-swatch2;
    float: left;
}

.widget.responsiveslideshow .description {
    display: block;
    padding: 10px 15px 10px 15px;
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight: @font-swatch5-font-weight;
    line-height:bkscale(@font-swatch5-line-height, 0.9);
    color: @color-swatch5;
    letter-spacing: @font-swatch5-letter-spacing;
    background-color: @color-swatch2;
    float: left;
    width: 100%;
}

.widget.responsiveslideshow .slideshow-widget .btn-prev, 
.widget.responsiveslideshow .slideshow-widget .btn-next {
    font-size: 0;
    z-index: 11;
    text-indent: -99999px;
    width: 20px;
    height: 20px;
}

.widget.responsiveslideshow .slideshow-widget .btn-prev {
  background: image('/images/greytriangle-left.png') no-repeat center left;
}

.widget.responsiveslideshow .slideshow-widget .btn-next {
  background: image('/images/greytriangle-right.png') no-repeat center right;   
}

.widget.responsiveslideshow .slideshow-widget-controls {
  margin: 10px 0;
}

.widget.responsiveslideshow .slideshow-widget .btn-play
{
    background: image('/images/slideshow-play.png') center no-repeat;
    background-size: contain;
    border-radius:10px;
    font-size:0;
    text-indent: -99999px;
    &:after {
	    display: none;
    }
}

.widget.responsiveslideshow .slideshow-widget:hover .btn-play.pause
{
    background: image('/images/slideshow-pause.png') center no-repeat;
    background-size: contain;  
}

.widget.responsiveslideshow .slideshow-widget-controls .dot
{
  width: 8px;
  height: 8px;
  line-height: 14px;
  display: inline-block;
  background-color: @color-swatch2;
  cursor: pointer;
  background-image: none;
}

.widget.responsiveslideshow .slideshow-widget-controls .dot.selected
{
   background-color: @color-swatch4;
}

.widget.responsiveslideshow .dot {
  border: none;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  border-radius: 50px;
}
/* ... */

